# lm-scorer

./: .gitignore  CITATION.cff  grice_dataset.csv  license  pyproject.toml  readme.md  release-please-config.json
.github/workflows/: lint.yml  pr-title.yml  release-please.yml  release.yml  test-macos.yml  test-ubuntu.yml
examples/: lm_scorer.ipynb
lm_scorer/models/: auto.py  bert.py  causal.py  gpt2.py
lm_scorer/models/abc/: base.py  batch.py  transformers.py
tests/integration/: test_bert.py  test_gpt2.py
tests/models/: test_auto.py  test_bert.py  test_gpt2.py
tests/models/abc/: test_base.py
tests/unit/models/: test_auto.py  test_causal.py  test_gpt2.py
tests/unit/models/abc/: test_base.py  test_batch.py
