[tool.poetry]
name = "lm-scorer"
version = "0.5.0"
description = "Language Model based sentences scoring library"
authors = ["Simone Primarosa <simonepri@outlook.com>"]
license = "MIT"
homepage = "https://github.com/simonepri/lm-scorer#readme"
repository = "https://github.com/simonepri/lm-scorer"
readme = "readme.md"
keywords = ["language", "model", "lm", "probability", "score"]

packages = [
  {include = "lm_scorer", from = "."},
  {include = "tests", from = ".", format = "sdist"},
]

[tool.poetry.scripts]
lm-scorer = 'lm_scorer.bin.cli:run'

[tool.taskipy.tasks]
lint = "python -m pylint lm_scorer tests -v --output-format colorized --disable duplicate-code --generated-members=torch.*"
types = "python -m mypy lm_scorer tests --ignore-missing-imports"
format = "python -m black lm_scorer tests"
test = "python -m pytest --cov=lm_scorer tests --verbose"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
transformers = ">=4.30,<6"
torch = "^2.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.12"
black = "^26.0"
pylint = "^3.1"
mypy = "^1.9"
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
pytest-sugar = "^1.0"
pytest-describe = "^2.2"
scipy = "^1.11"
torch = "^2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
